--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -759,7 +759,7 @@ pre tt:after {
 }
 
 .social-intro {
-  margin-top: 1rem;
+  margin-top: 1.5rem;
   display: none;
 }
 
@@ -928,7 +928,11 @@ div:last-of-type hr {
   }
 
   .link-container {
-    margin-right: 20px;
+    margin-right: 2rem;
+  }
+
+  .link-container:last-child {
+    margin-right: 0
   }
 
 }
